--- a/tesla.css
+++ b/tesla.css
@@ -1,29 +1,9 @@
-@font-face {
-    font-family: GothamSSm;
-    src: url("fonts/GothamSSm-Book_Web.woff2");
-}
-
-@font-face {
-    font-family: GothamSSmMedium;
-    src: url("fonts/GothamSSm-Medium_Web.woff2");
-}
+@import url(global.css);
+@import url(normalize.css);
 
 div {
     font-family: GothamSSm;
     white-space: nowrap;
-
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body,
-html {
-    height: 100%;
-    margin: 0;
 }
 
 .content {
@@ -76,7 +56,7 @@ a {
 
 }
 
-.navbar svg {
+.navbar .logo {
     width: 113px;
     margin-left: 50px;
 
@@ -131,11 +111,11 @@ input[type="checkbox"] {
 }
 
 
-.close-btn:checked~.content div.side-menu {
+.menu-close-chk:checked~.content div.side-menu {
     right: 0;
 }
 
-.close-btn:checked~.content div.banner {
+.menu-close-chk:checked~.content div.banner {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -146,7 +126,7 @@ input[type="checkbox"] {
 
 }
 
-.close-btn:checked~.content div.btn-group {
+.menu-close-chk:checked~.content div.btn-group {
     top: 85%;
     z-index: -999;
     backdrop-filter: blur(5px);
@@ -171,7 +151,6 @@ input[type="checkbox"] {
     transition: .5s;
     overflow-y: scroll;
     z-index: 999;
-
 }
 
 .desktop-sidebar,
