--- a/style/tesla.css
+++ b/style/tesla.css
@@ -2,401 +2,368 @@
 @import url(normalize.css);
 
 div {
-    font-family: GothamSSm;
-    white-space: nowrap;
+  font-family: GothamSSm;
+  white-space: nowrap;
 }
 
 .content {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 2;
-    width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+  width: 100%;
 }
 
 .img1 {
-    background-image: url("../img/Homepage-Model-Y-Global-Desktop.webp");
+  background-image: url("../img/Homepage-Model-Y-Global-Desktop.png");
 }
 
 .img2 {
-    background-image: url("../img/Homepage-Model-3-Desktop-LHD.webp");
+  background-image: url("../img/Homepage-Model-3-Desktop-LHD.png");
 }
 
 .img3 {
-    background-image: url("../img/Model-S-homepage-desktop.jpeg");
+  background-image: url("../img/Model-S-homepage-desktop.png");
 }
 
 .img4 {
-    background-image: url("../img/Homepage-Model-X-Desktop-LHD.webp");
+  background-image: url("../img/Homepage-Model-X-Desktop-LHD.png");
 }
 
-.bg-image{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+.bg-image {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
-
 
 a {
-    text-decoration: none;
-    color: black;
-
-
+  text-decoration: none;
+  color: black;
 }
 
 .navbar .logo {
-    width: 113px;
-    margin-left: 50px;
-
+  width: 113px;
+  margin-left: 50px;
 }
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-    font-size: 14px;
-    font-weight: 600;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .navbar .navbar-menu ul {
-    display: flex;
-    list-style-type: none;
-    gap: 10px;
+  display: flex;
+  list-style-type: none;
+  gap: 10px;
 }
 
 .navbar .navbar-menu ul li {
-    padding: 6px 13px;
-    border-radius: 5px;
+  padding: 6px 13px;
+  border-radius: 5px;
 }
 
 .navbar .navbar-right-menu ul {
-    display: flex;
-    margin-right: 30px;
-    gap: 20px;
-    list-style-type: none;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  margin-right: 30px;
+  gap: 20px;
+  list-style-type: none;
+  align-items: center;
+  justify-content: center;
 }
 
 .navbar .navbar-right-menu ul li {
-    position: relative;
-    top: 2px;
-    padding: 6px 13px;
-    border-radius: 5px;
+  position: relative;
+  top: 2px;
+  padding: 6px 13px;
+  border-radius: 5px;
 }
 
 .navbar-right-menu ul label {
-    margin-top: 4px;
-    padding: 6px 13px;
-    cursor: pointer;
-    border-radius: 5px;
+  margin-top: 4px;
+  padding: 6px 13px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 input[type="checkbox"] {
-    display: none;
+  display: none;
 }
 
-
-.menu-close-chk:checked~.content div.side-menu {
-    right: 0;
+.menu-close-chk:checked ~ .content div.side-menu {
+  right: 0;
 }
 
-.menu-close-chk:checked~.content div.banner {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-    background-color: rgba(0, 0, 0, 0.499);
-    backdrop-filter: blur(5px);
-    filter: blur(3px);
-
+.menu-close-chk:checked ~ .content div.banner {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  background-color: rgba(0, 0, 0, 0.499);
+  backdrop-filter: blur(5px);
+  filter: blur(3px);
 }
 
-.menu-close-chk:checked~.content div.btn-group {
-    top: 85%;
-    z-index: -999;
-    backdrop-filter: blur(5px);
-    filter: blur(3px);
-
+.menu-close-chk:checked ~ .content div.btn-group {
+  top: 85%;
+  z-index: -999;
+  backdrop-filter: blur(5px);
+  filter: blur(3px);
 }
 
 .side-menu label {
-    position: absolute;
-    top: 30px;
-    right: 50px;
-    z-index: 5;
-    cursor: pointer;
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  z-index: 5;
+  cursor: pointer;
 }
 
 .side-menu {
-    position: fixed;
-    right: -400px;
-    background-color: white;
-    top: 0;
-    bottom: 0;
-    transition: .5s;
-    overflow-y: scroll;
-    z-index: 999;
+  position: fixed;
+  right: -400px;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  transition: 0.5s;
+  overflow-y: scroll;
+  z-index: 999;
 }
 
 .desktop-sidebar,
 .mobile-sidebar {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    line-height: 30px;
-    list-style-type: none;
-    font-size: 14px;
-    padding-top: 6rem;
-    font-family: GothamSSm;
-
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  line-height: 30px;
+  list-style-type: none;
+  font-size: 14px;
+  padding-top: 6rem;
+  font-family: GothamSSm;
 }
 
 .navbar-right-menu label:hover,
 .navbar-menu li:hover,
 .navbar-right-menu li:hover {
-    transition: ease-in .5s;
-    background-color: rgb(136, 215, 241);
-
-
+  transition: ease-in 0.5s;
+  background-color: rgb(136, 215, 241);
 }
 
 .desktop-sidebar li,
 .mobile-sidebar li {
-    margin-left: 40px;
-    padding-right: 7rem;
-    padding-left: 5px;
-    border-radius: 3px;
+  margin-left: 40px;
+  padding-right: 7rem;
+  padding-left: 5px;
+  border-radius: 3px;
 }
 
 .desktop-sidebar i,
 .mobile-sidebar i {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .desktop-sidebar li:last-child,
 .mobile-sidebar li:last-child {
-    font-size: 0.8rem;
-    margin-top: -10px;
-    padding-left: 30px;
+  font-size: 0.8rem;
+  margin-top: -10px;
+  padding-left: 30px;
 }
-
 
 .desktop-sidebar li:hover,
 .mobile-sidebar li:hover {
-    transition: ease-in .4s;
-    background-color: rgb(241, 241, 241);
+  transition: ease-in 0.4s;
+  background-color: rgb(241, 241, 241);
 }
 
-
-@media screen and (min-width:1200px) {
-    .mobile-sidebar {
-        display: none;
-
-    }
-
+@media screen and (min-width: 1200px) {
+  .mobile-sidebar {
+    display: none;
+  }
 }
 
-@media screen and (max-width:1200px) {
-    .desktop-sidebar {
-        display: none;
-    }
+@media screen and (max-width: 1200px) {
+  .desktop-sidebar {
+    display: none;
+  }
 
-    .navbar-menu {
-        display: none;
-    }
+  .navbar-menu {
+    display: none;
+  }
 
-    .navbar-right-menu li:first-child {
-        display: none;
-    }
+  .navbar-right-menu li:first-child {
+    display: none;
+  }
 
+  .side-menu {
+    padding-bottom: 20px;
+  }
 
-    .side-menu {
-        padding-bottom: 20px;
-
-    }
-
-    .navbar-right-menu label {
-        background-color: rgb(136, 215, 241);
-    }
-
+  .navbar-right-menu label {
+    background-color: rgb(136, 215, 241);
+  }
 }
 
 .btn-group {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    position: relative;
-    top:80%;
-
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  position: relative;
+  top: 80%;
 }
 
 .btn-group button:first-child {
-    padding: 10px 90px;
-    background-color: rgba(23, 26, 32, 0.75);
-    color: white;
-    border-radius: 5px;
-    font-family: GothamSSm;
-    font-size: 14px;
-    border: 0;
+  padding: 10px 90px;
+  background-color: rgba(23, 26, 32, 0.75);
+  color: white;
+  border-radius: 5px;
+  font-family: GothamSSm;
+  font-size: 14px;
+  border: 0;
 }
 
 .btn-group button:last-child {
+  padding: 10px 98px;
+  background-color: rgba(244, 244, 244, 0.65);
+  color: black;
+  border-radius: 5px;
+  font-size: 14px;
+  border: 0;
+  font-family: GothamSSm;
+}
+
+@media screen and (max-width: 840px) {
+  .btn-group button:last-child {
+    padding: 11px 50px;
+  }
+
+  .btn-group button:first-child {
+    padding: 11px 30px;
+  }
+}
+
+@media screen and (max-width: 705px) {
+  .btn-group button:first-child {
+    padding: 10px 90px;
+  }
+
+  .btn-group button:last-child {
     padding: 10px 98px;
-    background-color: rgba(244, 244, 244, 0.65);
-    color: black;
-    border-radius: 5px;
-    font-size: 14px;
-    border: 0;
-    font-family: GothamSSm;
+  }
 }
 
-@media screen and (max-width:840px) {
-    .btn-group button:last-child {
-        padding: 11px 50px;
-    }
+@media screen and (max-width: 599px) {
+  .btn-group {
+    flex-direction: column;
+    top: 75%;
+    width: 100%;
+    position: fixed;
+    bottom: 150px;
+  }
 
-    .btn-group button:first-child {
-        padding: 11px 30px;
-    }
-}
+  .btn-group button:first-child {
+    width: 90%;
+  }
 
-@media screen and (max-width:705px) {
-    .btn-group button:first-child {
-        padding: 10px 90px;
-    }
+  .btn-group button:last-child {
+    width: 90%;
+  }
+  .img2 {
+    background-image: url("../img/mobil2.png");
+  }
 
-    .btn-group button:last-child {
-        padding: 10px 98px;
-    }
+  .img3 {
+    background-image: url("../img/mobil3.png");
+  }
 
-}
+  .img4 {
+    background-image: url("../img/mobil4.png");
+  }
 
-@media screen and (max-width:599px) {
-    .btn-group {
-        flex-direction: column;
-        top:75%;
-        width: 100%;position: fixed;
-     bottom: 150px;
-   
-
-    }
-
-    .btn-group button:first-child {
-        width: 90%;
-
-    }
-
-    .btn-group button:last-child {
-        width: 90%;
-    }
-
-    .img2 {
-        background-image: url("../img/mobil2.webp");
-    }
-
-    .img3 {
-        background-image: url("../img/mobil3.jpeg");
-    }
-
-    .img4 {
-        background-image: url("../img/mobil4.webp");
-    }
-  
-    .mobile-footer ul{
-     padding: 20px;  
-    } 
-    .mobile-footer ul{
-        flex-direction: column;
-       
-    }
-    .mobile-footer ul li:nth-child(3),.mobile-footer ul li:nth-child(5){
-        display: none;
-    }
-
+  .mobile-footer ul {
+    padding: 20px;
+  }
+  .mobile-footer ul {
+    flex-direction: column;
+  }
+  .mobile-footer ul li:nth-child(3),
+  .mobile-footer ul li:nth-child(5) {
+    display: none;
+  }
 }
 
 .img1 div,
 .img2 div,
 .img3 div,
 .img4 div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 120px;
-    gap: 4px;
-    font-size: 1.2rem;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 120px;
+  gap: 4px;
+  font-size: 1.2rem;
 }
 
 .img1 div a {
-    font-size: 14.2px;
-    border-bottom: 1px solid;
+  font-size: 14.2px;
+  border-bottom: 1px solid;
 }
 
 .footer ul {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    position: absolute;
-    bottom: -297.5%;
-    gap: 10px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  position: absolute;
+  bottom: -297.5%;
+  gap: 10px;
 }
 
 .footer ul,
 .mobile-footer ul {
-    font-family: GothamSSm;
-    font-size: 12px;
-    list-style-type: none;
-
-
+  font-family: GothamSSm;
+  font-size: 12px;
+  list-style-type: none;
 }
 
 .footer ul a,
 .mobile-footer a {
-    color: white;
+  color: white;
 }
 
-@media screen and (max-width:900px) {
-    .img4 .footer {
-        display: none;
-    }
-    
+@media screen and (max-width: 900px) {
+  .img4 .footer {
+    display: none;
+  }
 }
 
- @media screen and (min-width:900px) {
-    .mobile-footer{
-        display: none;
-       
-    }
-   
+@media screen and (min-width: 900px) {
+  .mobile-footer {
+    display: none;
+  }
 }
 
-.mobile-footer{
-
-    background-color: black;
+.mobile-footer {
+  background-color: black;
 }
-.mobile-footer div{
-    position: sticky;
-    bottom: 0;
-
+.mobile-footer div {
+  position: sticky;
+  bottom: 0;
 }
-.mobile-footer ul{
-    display: flex;
-    gap: 10px;
-    padding:20px;
-    align-items: center;
-    justify-content: center;
-} 
-@media screen and (max-width:375px){
-    .btn-group{
-        bottom: 150px;
-    }
+.mobile-footer ul {
+  display: flex;
+  gap: 10px;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 375px) {
+  .btn-group {
+    bottom: 150px;
+  }
 }
